# drf

./: .flake8  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
accounts/: admin.py  constants.py  exceptions.py  models.py  serializers.py  service.py  services.py  urls.py  views.py
accounts/api/: serializers.py  views.py
accounts/application/: commands.py  use_cases.py
accounts/application/services/: email_service.py  token_service.py
accounts/domain/: exceptions.py  manager.py  models.py
accounts/infrastructure/: admin.py  apps.py  repositories.py  urls.py
accounts/migrations/: 0001_initial.py  0002_passwordreset.py  0003_user_is_verified.py
books/: admin.py  documents.py  filters.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
books/fixtures/: subjects.json
books/migrations/: 0001_initial.py  0002_comment_level_comment_lft_comment_rght_and_more.py  0002_readlist.py  0003_alter_comment_created_at.py  0003_readlist_date_added.py  0004_alter_readlist_date_added.py  0004_readlist_unique_read_list_entry.py  0005_alter_rating_unique_together_and_more.py  0005_alter_readlist_date_added.py  0006_alter_author_name_alter_comment_user_and_more.py  0006_author_remove_book_author_book_author.py  0007_alter_comment_user.py  0007_comment.py  0008_alter_comment_options_remove_comment_users_and_more.py  0009_alter_comment_options_rename_text_comment_content_and_more.py  0010_comment_parent.py  0011_remove_book_rating_rating.py
books/tests/: test_api.py
drf_project/: settings.py  urls.py
(+1 files in other folders)
